<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_dash_board">

    <ImageView
        android:id="@+id/menuicon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/menuicon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/dashboardmsg"
        android:textColor="@color/darkpurple"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/menuicon" />

    <LinearLayout
        android:id="@+id/retailersDashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/emicard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/emicalendar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/product"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                app:cardBackgroundColor="@color/white"
                android:layout_toRightOf="@+id/emicard"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/customerdetailsicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/customer"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emicard"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:src="@drawable/crediticon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/credit"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/customerDashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/customeremicard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/emicalendar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/emi"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_toRightOf="@+id/emicard"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/customerdetailsicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:text="@string/customerpro"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/customerreports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emicard"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:src="@drawable/crediticon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/reports"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/customerMakePaymentCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emicard"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/makepayicon"
                        app:tint="@color/lighttpurple"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:text="@string/makepayment"
                        android:textColor="@color/darkpurple"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:alpha=".6"
        android:scaleType="centerCrop"
        android:src="@drawable/dashboardbackbottom"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>