<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choosetypepagebg"
    tools:context=".ui.slideshow.ui.view.activity.ChooseYourRolePage">

    <RelativeLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/headerimage"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/selectpagebanner"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooserole"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/headerlayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@+id/powered_by">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/customerid"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                app:cardUseCompatPadding="true"
                app:strokeWidth="@dimen/_2sdp"
                app:strokeColor="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_6sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/_6sdp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/customer"/>

                <TextView
                    android:text="@string/cust"
                    android:textColor="@color/purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/inter_bold"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/retailerid"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                app:cardUseCompatPadding="true"
                app:strokeWidth="@dimen/_2sdp"
                app:strokeColor="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_6sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="@dimen/_6sdp"
                    android:layout_gravity="center">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/retailericon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retailer"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/inter_bold"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/purple"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


    </LinearLayout>






    <LinearLayout
        android:id="@+id/powered_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:src="@drawable/imagea" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4sdp"
            android:fontFamily="@font/inter_bold"
            android:text="BOS Center  Pvt Ltd"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>